feat: Estilizando box com dados do evento

--- a/src/components/hero/Hero.module.scss
+++ b/src/components/hero/Hero.module.scss
@@ -20,6 +20,49 @@
     }
 
     .infoWrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
         grid-area: info;
+        background-color: var(--color-red);
+        border-right: solid 6px rgba(0, 0, 0, .1);
+
+        .info {
+            display: inline-flex;
+            flex-direction: column;
+
+            .date {
+                color: var(--color-yellow);
+                font-family: Bombarda;
+                font-weight: 900;
+                text-transform: uppercase;
+                font-size: 4rem;
+            }
+
+            .location {
+                display: inline-flex;
+                align-items: center;
+                column-gap: 24px;
+                width: 100%;
+                font-size: 2rem;
+                letter-spacing: 2px;
+                line-height: 1;
+                font-weight: 300;
+                text-transform: uppercase;
+                color: var(--color-cream);
+                white-space: nowrap;
+
+                .separator {
+                    position: relative;
+                    top: 3px;
+                    margin: 0;
+                    width: 100%;
+                    height: 2px;
+                    background-color: var(--color-cream);
+                    border: 0;
+                }
+            }
+        }
     }
 }
