fix: Corrigindo fontes

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -8,27 +8,27 @@
 }
 
 @font-face {
-    font-family: 'Fixture';
-    src: local('Fixture Bold'), local('Fixture-Bold'),
-        url('/fonts/subset-Fixture-Bold.woff2') format('woff2');
+    font-family: 'Fixture Expanded';
+    src: local('Fixture Expanded Bold'), local('Fixture-ExpandedBold'),
+        url('/fonts/subset-Fixture-ExpandedBold.woff2') format('woff2');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Fixture';
-    src: local('Fixture Light'), local('Fixture-Light'),
-        url('/fonts/subset-Fixture-Light.woff2') format('woff2');
+    font-family: 'Fixture Expanded';
+    src: local('Fixture Expanded Light'), local('Fixture-ExpandedLight'),
+        url('/fonts/subset-Fixture-ExpandedLight.woff2') format('woff2');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Fixture';
-    src: local('Fixture SemiBold'), local('Fixture-SemiBold'),
-        url('/fonts/subset-Fixture-SemiBold.woff2') format('woff2');
+    font-family: 'Fixture Expanded';
+    src: local('Fixture Expanded SemiBold'), local('Fixture-ExpandedSemiBold'),
+        url('/fonts/subset-Fixture-ExpandedSemiBold.woff2') format('woff2');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
