--- a/src/components/hero/Hero.module.scss
+++ b/src/components/hero/Hero.module.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100vh;
     background-color: #000000;
-    grid-template-rows: 1fr 160px;
+    grid-template-rows: 3fr 1fr;
     grid-template-columns: 2fr 1fr;
     grid-template-areas:
         "logo logo"
@@ -16,7 +16,8 @@
         grid-area: logo;
         justify-self: center;
         align-self: center;
-        max-width: 85%;
+        max-width: 70%;
+        max-height: 60%;
         width: 700px;
         height: 300px;
     }
@@ -39,7 +40,7 @@
                 font-family: Bombarda;
                 font-weight: 900;
                 text-transform: uppercase;
-                font-size: 4rem;
+                font-size: clamp(3rem, 5vw, 5rem);
             }
 
             .location {
@@ -47,7 +48,7 @@
                 align-items: center;
                 column-gap: 24px;
                 width: 100%;
-                font-size: 1.6rem;
+                font-size: clamp(1.4rem, 2.5vw, 2.3rem);
                 line-height: 1;
                 font-weight: 300;
                 text-transform: uppercase;
