--- a/src/components/intro/Intro.module.scss
+++ b/src/components/intro/Intro.module.scss
@@ -1,3 +1,5 @@
+@import '@styles/constants';
+
 .introWrapper {
     display: flex;
     justify-content: center;
@@ -9,4 +11,11 @@
     text-align: center;
     width: 100%;
 
+    .headline {
+        color: $color-cream;
+        font-family: $font-heading;
+        font-size: clamp(3rem, 3.5vw, 3.5vw);
+        line-height: 1.2;
+        text-transform: uppercase;
+    }
 }
