--- a/src/components/intro/Intro.module.scss
+++ b/src/components/intro/Intro.module.scss
@@ -17,9 +17,22 @@
         font-size: clamp(3rem, 3.5vw, 3.5vw);
         line-height: 1.2;
         text-transform: uppercase;
+
+        .glowed,
         .underlined {
             position: relative;
         }
+        .glowed::before {
+            content: '';
+            position: absolute;
+            top: -45%;
+            left: -11%;
+            width: 20%;
+            height: 100%;
+            background: url('/img/intro/glowed-text.png') center center no-repeat transparent;
+            background-size: contain;
+        }
+
         .underlined::before {
             content: '';
             position: absolute;
