--- a/src/components/_ui/cta/Cta.module.scss
+++ b/src/components/_ui/cta/Cta.module.scss
@@ -44,7 +44,7 @@ $default-animation-duration: .4s;
 
         background: linear-gradient(0deg,
             $color-yellow 0%,
-            $color-yellow calc(100% - $fold-size),
+            $color-yellow calc(100% - ($fold-size - 1px)),
             transparent calc(100% - $fold-size));
         color: #000000;
 
