--- a/src/components/_ui/cta/Cta.module.scss
+++ b/src/components/_ui/cta/Cta.module.scss
@@ -41,14 +41,35 @@ $default-animation-duration: .4s;
             border-bottom: solid $cta-fold-size $color-red;
         }
 
+        color: #000000;
         background: linear-gradient(0deg,
             $color-yellow 0%,
             $color-yellow calc(100% - $cta-fold-size),
             transparent calc(100% - $cta-fold-size));
-        color: #000000;
 
         data {
             color: $color-red;
+        }
+    }
+
+    &.red {
+
+        &::before {
+            background-color: $color-red;
+        }
+
+        &::after {
+            border-bottom: solid $cta-fold-size $color-green;
+        }
+
+        color: #ffffff;
+        background: linear-gradient(0deg,
+            $color-red 0%,
+            $color-red calc(100% - $cta-fold-size),
+            transparent calc(100% - $cta-fold-size));
+
+        data {
+            color: $color-green;
         }
     }
 
