feat: Imagem da última edição

--- a/src/components/info/JoinTheChange.module.scss
+++ b/src/components/info/JoinTheChange.module.scss
@@ -35,4 +35,10 @@
             }
         }
     }
+
+    .photo {
+        position: relative;
+        width: 100%;
+        height: calc(100% + $cta-fold-size);
+    }
 }
