--- a/src/components/info/JoinTheChange.module.scss
+++ b/src/components/info/JoinTheChange.module.scss
@@ -40,5 +40,34 @@
         position: relative;
         width: 100%;
         height: calc(100% + $cta-fold-size);
+
+        .hovered {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            column-gap: 24px;
+
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, .7);
+
+            opacity: 0;
+            transition: opacity .4s ease;
+
+            span {
+                color: $color-cream;
+                font-size: 2rem;
+                text-transform: uppercase;
+            }
+        }
+
+        &:hover {
+            .hovered {
+                opacity: 1;
+            }
+        }
     }
 }
