--- a/src/components/info/JoinTheChange.module.scss
+++ b/src/components/info/JoinTheChange.module.scss
@@ -8,8 +8,12 @@
 
     .text {
         grid-row: span 2;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         background-color: $color-green-light;
-        padding: 15vh 8vw;
+        padding: 0 8vw;
 
         .headline {
             font-size: clamp(3rem, 3.5vw, 3.5vw);
