--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -2,6 +2,7 @@ $color-cream: #F5E3CE;
 $color-green-light: #42968C;
 $color-green: #1C4C4D;
 $color-red: #EE4043;
+$color-red-dark: #60072D;
 $color-yellow: #FDB813;
 
 $font-heading: 'Bombarda', serif;
