feat: adicionar nova cor

--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -1,5 +1,6 @@
-$color-cream: #F5E3CE;
-$color-red: #EE4043;
-$color-yellow: #FDB813;
+$color-cream: #f5e3ce;
+$color-red: #ee4043;
+$color-yellow: #fdb813;
+$color-dark-green: #1c4c4d;
 
-$font-heading: 'Bombarda', serif;
+$font-heading: "Bombarda", serif;
