feat: adicionar cor verde

--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -1,6 +1,7 @@
 $color-cream: #f5e3ce;
 $color-red: #ee4043;
 $color-yellow: #fdb813;
+$color-green: #42968c;
 $color-dark-green: #1c4c4d;
 
 $font-heading: "Bombarda", serif;
