fix: ajustar card de em breve

--- a/src/components/schedule/card/Card.module.scss
+++ b/src/components/schedule/card/Card.module.scss
@@ -32,10 +32,16 @@
 }
 
 .soonMessage {
-    border: 1px solid #000000;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 536px;
+    font-family: $font-heading;
+    text-transform: uppercase;
+    font-size: clamp(2rem, 2vw, 3vw);
+    -webkit-text-stroke: 1px rgba($color-green, 0.4);
+    -webkit-text-fill-color: transparent;
 }
 
 .info {
