--- a/src/components/_ui/cta/Cta.module.scss
+++ b/src/components/_ui/cta/Cta.module.scss
@@ -1,6 +1,6 @@
-@import '@styles/constants';
+@import "@styles/constants";
 
-$default-animation-duration: .4s;
+$default-animation-duration: 0.4s;
 
 .cta {
     position: relative;
@@ -42,10 +42,12 @@ $default-animation-duration: .4s;
         }
 
         color: #000000;
-        background: linear-gradient(0deg,
+        background: linear-gradient(
+            0deg,
             $color-yellow 0%,
             $color-yellow calc(100% - ($cta-fold-size - 1px)),
-            transparent calc(100% - $cta-fold-size));
+            transparent calc(100% - $cta-fold-size)
+        );
 
         data {
             color: $color-red;
@@ -53,7 +55,6 @@ $default-animation-duration: .4s;
     }
 
     &.red {
-
         &::before {
             background-color: $color-red;
         }
@@ -63,10 +64,12 @@ $default-animation-duration: .4s;
         }
 
         color: #ffffff;
-        background: linear-gradient(0deg,
+        background: linear-gradient(
+            0deg,
             $color-red 0%,
-            $color-red calc(100% - $cta-fold-size),
-            transparent calc(100% - $cta-fold-size));
+            $color-red calc(100% - ($cta-fold-size - 1px)),
+            transparent calc(100% - $cta-fold-size)
+        );
 
         data {
             color: $color-green;
@@ -89,7 +92,7 @@ $default-animation-duration: .4s;
         bottom: 0;
         width: 100%;
         height: 100%;
-        transition: transform $default-animation-duration ease, opacity .3s ease;
+        transition: transform $default-animation-duration ease, opacity 0.3s ease;
         z-index: 1;
     }
 
