--- a/src/components/schedule/modal/Modal.module.scss
+++ b/src/components/schedule/modal/Modal.module.scss
@@ -22,7 +22,7 @@
     top: 10vh;
     left: 50%;
     transform: translateX(-50%);
-    background-color: $color-dark-green;
+    background-color: $color-green;
     max-width: 70%;
     width: 1000%;
     margin: 0 auto;
