--- a/src/components/_ui/rolante/Rolante.module.scss
+++ b/src/components/_ui/rolante/Rolante.module.scss
@@ -1,7 +1,7 @@
 @import "@styles/constants";
 
 .container {
-    -webkit-text-stroke: 2px $color-dark-green;
+    -webkit-text-stroke: 2px $color-green;
     -webkit-text-fill-color: transparent;
     font-size: clamp(2.5rem, 3.5vw, 4.5rem);
     font-family: $font-heading;
@@ -12,7 +12,7 @@
     &.bigger {
         font-size: clamp(5rem, 8vw, 8rem);
         padding: 5rem 0;
-        -webkit-text-stroke: 2.5px $color-dark-green;
+        -webkit-text-stroke: 2.5px $color-green;
     }
 }
 
