--- a/src/components/schedule/modal/Modal.module.scss
+++ b/src/components/schedule/modal/Modal.module.scss
@@ -6,7 +6,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba($color-cream, 0.7);
     z-index: 999;
     overflow-y: auto;
     -ms-overflow-style: none;
