fix: ajustar layout responsivo

--- a/src/components/sponsors/Sponsors.module.scss
+++ b/src/components/sponsors/Sponsors.module.scss
@@ -2,7 +2,8 @@
 
 .section {
     background-color: $color-cream;
-    padding: 0 6vw;
+    padding: 0 6rem;
+    padding-bottom: 6rem;
 }
 
 .container {
