--- a/src/components/schedule/card/Card.module.scss
+++ b/src/components/schedule/card/Card.module.scss
@@ -2,7 +2,7 @@
 
 .card {
     display: grid;
-    grid-template-rows: auto 318px 218px auto;
+    grid-template-rows: auto 20vw 13vw auto;
 
     &:hover {
         cursor: pointer;
@@ -36,7 +36,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 536px;
+    min-height: 33vw;
     font-family: $font-heading;
     text-transform: uppercase;
     font-size: clamp(2rem, 2vw, 3vw);
@@ -47,7 +47,7 @@
 .info {
     display: flex;
     justify-content: space-between;
-    font-size: 1.5rem;
+    font-size: clamp(0.75rem, 2vw, 1.5rem);
     font-weight: bold;
     text-transform: uppercase;
     padding: 1rem 0;
@@ -60,12 +60,13 @@
 .images {
     position: relative;
     display: flex;
-    height: 318px;
+    height: 20vw;
     border: 1px solid #000000;
 
     .image {
         display: block;
         width: 100%;
+        filter: grayscale(100%);
         position: relative;
     }
 }
@@ -77,7 +78,7 @@
     transition: all 0.2s ease-in-out;
 
     h2 {
-        font-size: clamp(2.1rem, 1.6vw, 1.8rem);
+        font-size: clamp(1rem, 2vw, 3rem);
         line-height: 1.2;
         color: $color-green-light;
         transition: all 0.2s ease-in-out;
