--- a/src/components/illustration/Illustration.module.scss
+++ b/src/components/illustration/Illustration.module.scss
@@ -1,4 +1,4 @@
-@import '@styles/constants';
+@import "@styles/constants";
 
 .illustrationContainer {
     position: relative;
@@ -6,8 +6,8 @@
     background-color: $color-cream;
 
     .illustration {
-        margin-top: -24px;
-        margin-bottom: -64px;
-        width: 100%
+        margin-top: -3vh;
+        margin-bottom: -6vh;
+        width: 100%;
     }
 }
