--- a/src/components/schedule/Schedule.module.scss
+++ b/src/components/schedule/Schedule.module.scss
@@ -9,4 +9,8 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap: 4vw;
     padding: 2vw 4vw;
+
+    @media (max-width: 1110px) {
+        grid-template-columns: 1fr;
+    }
 }
