--- a/src/components/faq/question/FaqQuestion.module.scss
+++ b/src/components/faq/question/FaqQuestion.module.scss
@@ -17,6 +17,10 @@ $arrow-size: 24px;
         width: 100%;
         cursor: pointer;
 
+        @media (max-width: 1110px) {
+            padding-right: 3rem;
+        }
+
         &::after {
             content: "";
             position: absolute;
