--- a/src/components/info/JoinTheChange.module.scss
+++ b/src/components/info/JoinTheChange.module.scss
@@ -1,10 +1,16 @@
-@import '@styles/constants';
+@import "@styles/constants";
 
 .info {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 5fr 1fr;
     height: 90vh;
+
+    @media (max-width: 1110px) {
+        height: auto;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 200px 100px;
+    }
 
     .text {
         grid-row: span 2;
@@ -15,8 +21,13 @@
         background-color: $color-green-light;
         padding: 0 8vw;
 
+        @media (max-width: 1110px) {
+            grid-row: auto;
+            padding: 6vh 8vw;
+        }
+
         .headline {
-            font-size: clamp(3rem, 3.5vw, 3.5vw);
+            font-size: clamp(2.5rem, 5vw, 5rem);
             font-family: $font-heading;
             line-height: 1;
             color: $color-cream;
@@ -56,10 +67,10 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, .7);
+            background-color: rgba(0, 0, 0, 0.7);
 
             opacity: 0;
-            transition: opacity .4s ease;
+            transition: opacity 0.4s ease;
 
             span {
                 color: $color-cream;
