--- a/src/components/schedule/card/Card.module.scss
+++ b/src/components/schedule/card/Card.module.scss
@@ -4,6 +4,10 @@
     display: grid;
     grid-template-rows: auto 20vw 13vw auto;
 
+    @media (max-width: 1110px) {
+        grid-template-rows: auto 300px 100px auto;
+    }
+
     &:hover {
         cursor: pointer;
 
@@ -42,6 +46,10 @@
     font-size: clamp(2rem, 2vw, 3vw);
     -webkit-text-stroke: 1px rgba($color-green-light, 0.4);
     -webkit-text-fill-color: transparent;
+
+    @media (max-width: 1110px) {
+        min-height: 300px;
+    }
 }
 
 .info {
@@ -62,6 +70,10 @@
     display: flex;
     height: 20vw;
     border: 1px solid #000000;
+
+    @media (max-width: 1110px) {
+        min-height: 300px;
+    }
 
     .image {
         display: block;
