--- a/src/components/workshops/card/Card.module.scss
+++ b/src/components/workshops/card/Card.module.scss
@@ -26,10 +26,14 @@
         border-radius: 100%;
         filter: grayscale(100%);
     }
+
+    @media (max-width: 1110px) {
+        display: none;
+    }
 }
 
 .info {
-    font-size: 1.5rem;
+    font-size: clamp(1rem, 2vw, 1.5rem);
     text-transform: uppercase;
     color: $color-cream;
 
@@ -39,13 +43,13 @@
 }
 
 .title {
-    font-size: 2rem;
+    font-size: clamp(1.5rem, 3vw, 4vw);
     text-transform: uppercase;
     color: $color-green-light;
     margin: 1rem 0;
 }
 
 .speaker {
-    font-size: 1.25rem;
+    font-size: clamp(1rem, 2vw, 1.25rem);
     color: $color-cream;
 }
