--- a/src/components/workshops/modal/Modal.module.scss
+++ b/src/components/workshops/modal/Modal.module.scss
@@ -24,11 +24,16 @@
     transform: translateX(-50%);
     background-color: $color-green-light;
     max-width: 70%;
-    width: 1000%;
+    width: 100%;
     margin: 0 auto;
     color: $color-cream;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2), 0px 24px 24px rgba(0, 0, 0, 0.05),
         0px 4px 44px 10px rgba(0, 0, 0, 0.15);
+
+    @media (max-width: 1110px) {
+        max-width: 90%;
+        top: 5vh;
+    }
 }
 
 .header {
@@ -36,13 +41,21 @@
     padding: 1.5rem;
     text-align: right;
 
+    @media (max-width: 1110px) {
+        padding: 3rem 1.5rem;
+
+        img {
+            width: 16px;
+        }
+    }
+
     .type {
         font-family: $font-heading;
-        font-size: 78px;
+        font-size: clamp(3rem, 5vw, 6rem);
         color: #000000;
         text-transform: uppercase;
         position: absolute;
-        top: -40px;
+        top: -3vw;
         left: 20px;
     }
 
@@ -55,7 +68,7 @@
     padding: 0 1.5rem;
 
     .info {
-        font-size: 1.5rem;
+        font-size: clamp(1rem, 2vw, 1.5rem);
         text-transform: uppercase;
 
         strong {
@@ -64,13 +77,13 @@
     }
 
     h2 {
-        font-size: clamp(2rem, 3vw, 4vw);
+        font-size: clamp(1.75rem, 3vw, 4vw);
         line-height: 1.2;
         margin: 2vw 0;
     }
 
     .description {
-        font-size: 1.25rem;
+        font-size: clamp(1rem, 2vw, 1.25rem);
         line-height: 1.5;
     }
 }
@@ -84,6 +97,11 @@
         display: flex;
         align-items: center;
         gap: 1.5rem;
+
+        @media (max-width: 1110px) {
+            flex-direction: column;
+            text-align: center;
+        }
     }
 
     .speaker + .speaker {
