--- a/src/components/info/JoinTheChange.module.scss
+++ b/src/components/info/JoinTheChange.module.scss
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 5fr 1fr;
-    height: 90vh;
+    min-height: 90vh;
 
     @media (max-width: 1110px) {
         height: auto;
@@ -19,7 +19,7 @@
         flex-direction: column;
         justify-content: center;
         background-color: $color-green-light;
-        padding: 0 8vw;
+        padding: 12vh 8vw;
 
         @media (max-width: 1110px) {
             grid-row: auto;
@@ -27,7 +27,7 @@
         }
 
         .headline {
-            font-size: clamp(2.5rem, 5vw, 5rem);
+            font-size: clamp(2.5rem, 4vw, 5rem);
             font-family: $font-heading;
             line-height: 1;
             color: $color-cream;
