--- a/src/components/sponsors/Sponsors.module.scss
+++ b/src/components/sponsors/Sponsors.module.scss
@@ -46,6 +46,7 @@
 
     .container {
         column-gap: 3%;
+        flex-wrap: wrap;
     }
 
     a {
@@ -54,7 +55,7 @@
         margin-top: 5vh;
 
         @media (max-width: 1110px) {
-            max-width: 33%;
+            max-width: 30%;
         }
 
         img {
