--- a/src/components/sponsors/Sponsors.module.scss
+++ b/src/components/sponsors/Sponsors.module.scss
@@ -20,6 +20,27 @@
     }
 }
 
+.presents {
+    max-width: 20%;
+    flex: 0 0 20%;
+    display: flex;
+    flex-direction: column;
+
+    @media (max-width: 1110px) {
+        max-width: 100%;
+        margin-bottom: 2rem;
+    }
+
+    img {
+        width: 80%;
+
+        @media (max-width: 1110px) {
+            margin: 0 auto;
+            display: block;
+        }
+    }
+}
+
 .sponsors {
     .container {
         flex-wrap: wrap;
