--- a/src/components/sponsors/Sponsors.module.scss
+++ b/src/components/sponsors/Sponsors.module.scss
@@ -71,7 +71,7 @@
     }
 
     a {
-        max-width: 10%;
+        max-width: 11%;
         display: block;
         margin-top: 3vh;
 
@@ -89,7 +89,7 @@
     margin-top: 5vh;
 
     a {
-        max-width: 600px;
+        width: 200px;
 
         img {
             width: 100%;
