--- a/src/components/sponsors/Sponsors.module.scss
+++ b/src/components/sponsors/Sponsors.module.scss
@@ -8,21 +8,25 @@
 
 .container {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 5rem;
+}
+
+.logos {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     @media (max-width: 1110px) {
-        flex-direction: column;
-    }
-
-    & .container {
-        @media (max-width: 1110px) {
-            flex-direction: row;
-        }
+        flex-direction: row;
     }
 }
 
 .presents {
-    max-width: 20%;
-    flex: 0 0 20%;
+    max-width: 30%;
+    flex: 0 0 30%;
     display: flex;
     flex-direction: column;
 
@@ -32,7 +36,8 @@
     }
 
     img {
-        width: 80%;
+        margin-top: 2rem;
+        max-width: 100%;
 
         @media (max-width: 1110px) {
             margin: 0 auto;
@@ -42,13 +47,13 @@
 }
 
 .sponsors {
-    .container {
+    .logos {
         flex-wrap: wrap;
         column-gap: 5%;
     }
 
     a {
-        max-width: 16%;
+        max-width: 15%;
         display: block;
 
         @media (max-width: 1110px) {
@@ -62,16 +67,15 @@
 }
 
 .partners {
-    margin-top: 5vh;
     flex-grow: 1;
 
-    .container {
+    .logos {
         column-gap: 3%;
         flex-wrap: wrap;
     }
 
     a {
-        max-width: 11%;
+        max-width: 9%;
         display: block;
         margin-top: 3vh;
 
@@ -85,11 +89,30 @@
     }
 }
 
-.madeBy {
-    margin-top: 5vh;
+.footer {
+    display: flex;
+    gap: 5rem;
+}
 
+.madeBy {
     a {
-        width: 200px;
+        max-width: 300px;
+
+        img {
+            width: 100%;
+        }
+    }
+}
+
+.entity {
+    a {
+        display: block;
+        margin-top: 2rem;
+
+        @media (max-width: 1110px) {
+            margin-top: 1rem;
+            max-width: 100px;
+        }
 
         img {
             width: 100%;
